--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <resources>
 
-    <!-- Inspection requests list attributes -->
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+
     <dimen name="inspections_requests_list_item_text_view_margin">8dp</dimen>
     <dimen name="inspections_requests_list_item_button_margin">8dp</dimen>
 
