--- a/app/src/main/res/layout/activity_inspection_requests.xml
+++ b/app/src/main/res/layout/activity_inspection_requests.xml
@@ -1,42 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".inspectionrequests.InspectionRequestsActivity"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:elevation="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+    <data>
+        <variable
+            name="viewmodel"
+            type="dev.ph0ndragx.insuranceadjusterapp.inspectionrequests.InspectionsViewModel" />
+    </data>
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:paddingStart="12dp"
-            android:paddingLeft="12dp"
-            android:paddingEnd="12dp"
-            android:paddingRight="12dp"
-            android:theme="@style/MyToolbar"
-            app:popupTheme="@style/Theme.AppCompat.NoActionBar"
-            app:contentInsetStart="0dp"
-            app:title="@string/app_name"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/activity_inspection_requests_fragment_container"
+    <FrameLayout
+        android:id="@+id/activity_inspection_requests_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
-</LinearLayout>
+        <include layout="@layout/activity_inspection_requests_back_layer" tools:viewmodel="@{viewmodel}"/>
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:elevation="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/app_bar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:paddingStart="12dp"
+                android:paddingLeft="12dp"
+                android:paddingEnd="12dp"
+                android:paddingRight="12dp"
+                android:theme="@style/MyToolbar"
+                app:popupTheme="@style/Theme.AppCompat.NoActionBar"
+                app:contentInsetStart="0dp"
+                app:title="@string/app_name"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <include layout="@layout/activity_inspection_requests_front_layer" />
+
+    </FrameLayout>
+
+</layout>
