--- a/app/src/main/res/layout/claim_object_car_card.xml
+++ b/app/src/main/res/layout/claim_object_car_card.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/car_registration_number"
+            android:id="@+id/registration_number"
             style="@style/TextAppearance.MaterialComponents.Headline6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,36 +22,36 @@
             tools:text="KRK 100100" />
 
         <TextView
-            android:id="@+id/car_vin"
+            android:id="@+id/vin"
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="@dimen/inspections_requests_list_item_text_view_margin"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/car_registration_number"
+            app:layout_constraintTop_toBottomOf="@+id/registration_number"
             tools:text="1GCRCREH8EZ268928" />
 
         <TextView
-            android:id="@+id/car_make"
+            android:id="@+id/make"
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="@dimen/inspections_requests_list_item_text_view_margin"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/car_vin"
+            app:layout_constraintTop_toBottomOf="@+id/vin"
             tools:text="Porsche" />
 
         <TextView
-            android:id="@+id/car_model"
+            android:id="@+id/model"
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="@dimen/inspections_requests_list_item_text_view_margin"
-            app:layout_constraintStart_toEndOf="@+id/car_make"
-            app:layout_constraintTop_toBottomOf="@+id/car_vin"
+            app:layout_constraintStart_toEndOf="@+id/make"
+            app:layout_constraintTop_toBottomOf="@+id/vin"
             tools:text="Cayenne" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
