--- a/app/src/main/res/layout/fragment_document_list_item.xml
+++ b/app/src/main/res/layout/fragment_document_list_item.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/fragment_document_list_item_author"
+        android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/text_margin"
@@ -16,27 +16,27 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/fragment_document_list_item_filename"
+        android:id="@+id/filename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginStart="@dimen/text_margin"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_document_list_item_author" />
+        app:layout_constraintTop_toBottomOf="@+id/author" />
 
     <TextView
-        android:id="@+id/fragment_document_list_item_date"
+        android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginStart="@dimen/text_margin"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_document_list_item_filename" />
+        app:layout_constraintTop_toBottomOf="@+id/filename" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/fragment_document_list_item_download"
+        android:id="@+id/download"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
@@ -45,10 +45,10 @@
         android:text="@string/action_download"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/fragment_document_list_item_divider"/>
+        app:layout_constraintBottom_toBottomOf="@+id/divider"/>
 
     <View
-        android:id="@+id/fragment_document_list_item_divider"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
@@ -56,5 +56,5 @@
         android:layout_marginTop="@dimen/text_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_document_list_item_date" />
+        app:layout_constraintTop_toBottomOf="@+id/date" />
 </androidx.constraintlayout.widget.ConstraintLayout>
