--- a/app/src/main/res/layout/fragment_inspection_requests_list.xml
+++ b/app/src/main/res/layout/fragment_inspection_requests_list.xml
@@ -6,7 +6,7 @@
     tools:context=".inspectionrequests.list.InspectionRequestsListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fragment_inspection_requests_list_recycler_view"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
