--- a/app/src/main/res/layout/fragment_note_list_item.xml
+++ b/app/src/main/res/layout/fragment_note_list_item.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/activity_inspection_request_fragment_inspection_list_sequence"
+        android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/activity_inspection_request_fragment_inspection_list_arranged_date"
+        android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
@@ -25,24 +25,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/activity_inspection_request_fragment_inspection_list_inspection_date"
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:gravity="start"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/activity_inspection_request_fragment_inspection_list_arranged_date" />
-
-    <TextView
-        android:id="@+id/activity_inspection_request_fragment_inspection_list_inspection_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-        android:gravity="start"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/activity_inspection_request_fragment_inspection_list_inspection_date" />
+        app:layout_constraintTop_toTopOf="@+id/date" />
 
     <View
         android:layout_width="match_parent"
@@ -52,5 +42,5 @@
         android:layout_marginTop="@dimen/text_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_inspection_request_fragment_inspection_list_inspection_description" />
+        app:layout_constraintTop_toBottomOf="@+id/content" />
 </androidx.constraintlayout.widget.ConstraintLayout>
