--- a/app/src/main/res/layout/activity_inspection_requests.xml
+++ b/app/src/main/res/layout/activity_inspection_requests.xml
@@ -24,7 +24,7 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             app:elevation="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent">
