--- a/app/src/main/res/layout/activity_inspection_requests_back_layer.xml
+++ b/app/src/main/res/layout/activity_inspection_requests_back_layer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -15,7 +16,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/colorPrimary"
-        android:paddingTop="64dp">
+        android:paddingTop="?attr/actionBarSize">
 
         <View
             android:layout_width="320dp"
@@ -42,33 +43,36 @@
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/inspection_request_status_assigned"
-            android:checked="@={viewmodel.filter.assignedStatusCheckbox}"
             android:layout_margin="@dimen/inspections_requests_back_layer_statuses_margin"
+            android:checked="@={viewmodel.filter.assignedStatusCheckbox}"
+            android:text="@string/inspection_request_status_assigned"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/filter_statuses_section_header" />
+            app:layout_constraintTop_toBottomOf="@+id/filter_statuses_section_header"
+            tools:text="Przypisany" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/filter_checkbox_rejected"
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/inspection_request_status_rejected"
-            android:checked="@={viewmodel.filter.rejectedStatusCheckbox}"
             android:layout_margin="@dimen/inspections_requests_back_layer_statuses_margin"
+            android:checked="@={viewmodel.filter.rejectedStatusCheckbox}"
+            android:text="@string/inspection_request_status_rejected"
             app:layout_constraintStart_toEndOf="@+id/filter_checkbox_assigned"
-            app:layout_constraintTop_toBottomOf="@+id/filter_statuses_section_header" />
+            app:layout_constraintTop_toBottomOf="@+id/filter_statuses_section_header"
+            tools:text="Odrzucony" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/filter_checkbox_accepted"
             style="@style/Widget.MaterialComponents.Chip.Choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/inspection_request_status_accepted"
-            android:checked="@={viewmodel.filter.acceptedStatusCheckbox}"
             android:layout_margin="@dimen/inspections_requests_back_layer_statuses_margin"
+            android:checked="@={viewmodel.filter.acceptedStatusCheckbox}"
+            android:text="@string/inspection_request_status_accepted"
             app:layout_constraintStart_toEndOf="@+id/filter_checkbox_rejected"
-            app:layout_constraintTop_toBottomOf="@+id/filter_statuses_section_header" />
+            app:layout_constraintTop_toBottomOf="@+id/filter_statuses_section_header"
+            tools:text="Nieprzypisany" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
