--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
-            tools:text="Login" />
+            android:text="test@example.com"
+            tools:text="test@example.com" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -56,7 +57,9 @@
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="password"
                 android:inputType="textPassword"
+                android:text="password"
                 tools:text="Password" />
 
         </com.google.android.material.textfield.TextInputLayout>
