Add notification on new inspection request

--- a/app/src/main/res/menu/activity_inspection_requests_list_menu.xml
+++ b/app/src/main/res/menu/activity_inspection_requests_list_menu.xml
@@ -1,5 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/activity_inspection_requests_menu_action_simulate_add"
+        android:title="@string/activity_inspection_requests_menu_map"
+        android:icon="@drawable/ic_add_white_24dp"
+        app:showAsAction="always"/>
+
     <item
         android:id="@+id/activity_inspection_requests_menu_action_map"
         android:title="@string/activity_inspection_requests_menu_map"
